# safe_legged_scouting

./: CMakeLists.txt  README.md  package.xml
config/: reactive_planner.yaml  safe_bayesian_optimization.yaml
launch/: safe_bayesian_optimization.launch.py  safe_scout.launch.py
src/: evaluation_node.py  goal_point_publisher.cpp  reactive_navigation_node.cpp  safe_bayesian_optimization_node.cpp  subgoal_preference_test.cpp
