<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safe_bayesian_optimization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matthewyjiang@gmail.com">emgym</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>python3-numpy</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>trusses_custom_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>libpcl-dev</depend>
  <exec_depend>python3-shapely</exec_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
