<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safe_bayesian_optimization</name>
  <version>0.0.0</version>
  <description>Safe subgoal selection and reactive navigation using Bayesian optimization and terrain uncertainty.</description>
  <maintainer email="matthewyjiang@gmail.com">Matthew Jiang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS client libraries and launch support -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ROS messages, services, and transforms -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>trusses_custom_interfaces</depend>

  <!-- Custom message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- C++ libraries -->
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>boost</depend>
  <depend>cgal</depend>
  <depend>libqhull-dev</depend>
  <depend>libcurl</depend>
  <depend>qtbase5-dev</depend>
  <depend>libpcl-dev</depend>

  <!-- Python runtime dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>safe_scout_simulator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
